--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
             <aside>
                 <div class="crt-card">
                     <div class="crt-card-avatar">
-                        <img src="./assets/img/logo.jpeg" alt="">
+                        <img src="./assets/images/logo.jpeg" alt="">
                     </div>
                     <div class="crt-card-info">
                         <h2 class="text-upper">Kriss Radchenko</h2>
@@ -55,11 +55,11 @@
                         <ul class="crt-social">
                             <li>
                                 <a href="https://www.linkedin.com/" target="_blank">
-                                    <img src="assets/img/icon-linkedin.svg" alt="Linkedin">
+                                    <img src="assets/images/icon-linkedin.svg" alt="Linkedin">
                                 </a>
                             </li>
                             <li>
-                                <a href="./cv-radchenko.pdf" class="btn btn-primary" download="./cv-radchenko.pdf">DOWNLOAD CV</a>
+                                <a href="./CV-radchenko.pdf" class="btn btn-primary" download="cv-radchenko.pdf">DOWNLOAD CV</a>
                             </li>
                         </ul>
                     </div>
@@ -236,19 +236,19 @@
                         <div class="box-item">
                             <a href="https://kriss-tinkaa.github.io/A-Studio/">
                                 <h3 class="text-center">A-Studio</h3>
-                                <img src="./assets/img/work-1.png" alt="">
+                                <img src="./assets/images/work-1.png" alt="">
                             </a>
                         </div>
                         <div class="box-item">
                             <a href="https://kriss-tinkaa.github.io/SpiderShiba/">
                                 <h3 class="text-center">Spider Shiba</h3>
-                                <img src="./assets/img/work-2.png" alt="">
+                                <img src="./assets/images/work-2.png" alt="">
                             </a>
                         </div>
                         <div class="box-item">
                             <a href="https://kriss-tinkaa.github.io/Landing-page/">
                                 <h3 class="text-center">Shala</h3>
-                                <img src="./assets/img/work-3.png" alt="">
+                                <img src="./assets/images/work-3.png" alt="">
                             </a>
                         </div>
                     </section>
