--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz@1,6..96&family=Nunito+Sans&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="bundle.css">
 </head>
 
 <body>
